# data-pipeline

./: .env.example  .gitignore  Makefile  pyproject.toml
conf/: base.yaml  dev.yaml  prod.yaml
docs/: README.md  architecture.md
docs/schemas/: bronze_schema.md  gold_schema.md  silver_schema.md
scripts/: init_db.py
src/: __init__.py  pipeline.py
src/bronze/: __init__.py  handlers.py  scraper.py
src/common/: __init__.py  config.py  connectors.py  exceptions.py  logging.py  utils.py
src/quality/: __init__.py  checks.py  runner.py
src/silver/: parser.py  scd2_merge.py  transformer.py  validators.py
tests/: conftest.py
tests/integration/: test_bronze_flow.py  test_full_pipeline.py
tests/unit/: test_connectors.py  test_parser.py  test_quality_checks.py  test_scd2_merge.py  test_scraper.py  test_transformer.py
